create budget.fp.o POT file

--- a/budget.fedoraproject.org/po/budget.fedoraproject.org.pot
+++ b/budget.fedoraproject.org/po/budget.fedoraproject.org.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2016-02-22 23:45+0100\n"
+"POT-Creation-Date: 2016-03-11 23:11+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -22,7 +22,209 @@ msgid "Fedora Budgeting"
 msgstr ""
 
 #: data/content/index.html:20
-msgid "Budget Wat?"
+msgid "Fedora Budget"
+msgstr ""
+
+#: data/content/index.html:21
+msgid ""
+"This page will serve as a public clearing house for all information "
+"regarding money allocated and spent by the Fedora Project. Budget numbers"
+" will be updated quarterly, and any changes to the process will be "
+"reflected here in this page."
+msgstr ""
+
+#: data/content/index.html:24
+msgid "Contents"
+msgstr ""
+
+#: data/content/index.html:26
+msgid "Fedora Budget Numbers"
+msgstr ""
+
+#: data/content/index.html:28 data/content/index.html:140
+msgid "The Fedora Budget Process"
+msgstr ""
+
+#: data/content/index.html:29 data/content/index.html:191
+msgid "Regional Delegates"
+msgstr ""
+
+#: data/content/index.html:30 data/content/index.html:250
+msgid "Reimbursement"
+msgstr ""
+
+#: data/content/index.html:51
+msgid "Budget Numbers"
+msgstr ""
+
+#: data/content/index.html:56
+msgid "Component"
+msgstr ""
+
+#: data/content/index.html:57
+msgid "Total"
+msgstr ""
+
+#: data/content/index.html:64
+msgid "TOTAL BUDGET"
+msgstr ""
+
+#: data/content/index.html:72
+msgid "PREMIER EVENTS"
+msgstr ""
+
+#: data/content/index.html:80 data/content/index.html:202
+msgid "COUNCIL"
+msgstr ""
+
+#: data/content/index.html:180
+msgid ""
+"FCL = Fedora Community Action and Impact Lead (as of Fedora 22+, Remy "
+"DeCausemaker)."
+msgstr ""
+
+#: data/content/index.html:183
+msgid ""
+"Note that \"→\" in the chart above indicates that responsibility for that"
+" item feeds into a next step in responsibility; for example, regional "
+"treasurers are responsible for providing the FCL with the relevant "
+"information for their region, and the FCL is responsible for the general "
+"report to the community. Likewise, the Council is responsible for any "
+"top-level budget adjustment when the final budget comes in from our "
+"sponsor, and regions responsible to update accordingly if needed."
+msgstr ""
+
+#: data/content/index.html:185
+msgid ""
+"Regional Ambassadors will manage their own budgets, and report back "
+"quarterly on action and impact."
+msgstr ""
+
+#: data/content/index.html:187
+msgid ""
+"If a region does not submit a budget proposal within the timeline above, "
+"their budget will be allocated as general discretionary funds. Budgeted "
+"money not spent as planned may also be reallocated on a quarterly basis; "
+"if a region or budgeted subproject does not provide a quarterly update, "
+"budget for that region or subproject for future quarters may also be "
+"reallocated."
+msgstr ""
+
+#: data/content/index.html:234
+msgid "Each region will select three delegated roles:"
+msgstr ""
+
+#: data/content/index.html:237
+msgid "Treasurer"
+msgstr ""
+
+#: data/content/index.html:238
+msgid ""
+"The Regional Treasurer will be responsible for recording costs and "
+"disbursing funds. Cardholders don't necessarily have to serve this role, "
+"but it would reduce the number of hops between expense and report"
+msgstr ""
+
+#: data/content/index.html:239
+msgid "Logistician"
+msgstr ""
+
+#: data/content/index.html:240
+msgid ""
+"The Logistician Delegate will be accountable for shipping swag, banners, "
+"and other physical items that need to be shared regionally, as well as "
+"any other coordinating for event staffing and organization. This includes"
+" convening weekly ambassador IRC meetings."
+msgstr ""
+
+#: data/content/index.html:241
+msgid "Storyteller"
+msgstr ""
+
+#: data/content/index.html:242
+msgid ""
+"The Storytelling Delegate will be accountable for Regional Reports. They "
+"don't necessarily have to write all the original content, they just need "
+"to be accountable for ensuring content makes it out onto our channels."
+msgstr ""
+
+#: data/content/index.html:245
+msgid "One person may hold no more than (2) of these roles at the same time."
+msgstr ""
+
+#: data/content/index.html:251
+msgid ""
+"Holding with our current policies, reimbursement will depend on "
+"submission of an Event Report to the appropriate channels (mail lists, "
+"communityblog, and the planet/magazine when applicable)"
+msgstr ""
+
+#: data/content/index.html:252
+msgid ""
+"Event reports going forward should also include a very short list of "
+"bullet points. These bullet points are the necessary ammunition we need "
+"to reinforce our proposals to increase funding for regional programs "
+"going forward."
+msgstr ""
+
+#: data/content/index.html:253
+msgid ""
+"Action is any typical or special activity that ambassadors lead "
+"regionally such as:"
+msgstr ""
+
+#: data/content/index.html:255
+msgid "Tabling at Conferences, Conventions, or other large events"
+msgstr ""
+
+#: data/content/index.html:256
+msgid "Presenting/Representing Fedora at Local Meetups"
+msgstr ""
+
+#: data/content/index.html:257
+msgid "Organizing FADS, Workshops, or other Fedora-specific Events"
+msgstr ""
+
+#: data/content/index.html:260
+msgid ""
+"Impact includes the outcomes from the activities as above. This includes "
+"things like:"
+msgstr ""
+
+#: data/content/index.html:262
+msgid "Attendees contacted or reached"
+msgstr ""
+
+#: data/content/index.html:263
+msgid "Fedora Badges issued at or as a result of the event"
+msgstr ""
+
+#: data/content/index.html:264
+msgid "Pull requests and patches submitted as a result of event"
+msgstr ""
+
+#: data/content/index.html:265
+msgid "Bugs reported/Tickets Filed"
+msgstr ""
+
+#: data/content/index.html:266
+msgid "Candidates sourced (i.e. Outreachy, GSoC, and/or other FOSS programs)"
+msgstr ""
+
+#: data/content/index.html:267
+msgid "Articles/Videos/Photos/Content published by or about regional team"
+msgstr ""
+
+#: data/content/index.html:268
+msgid "Social media mentions and interactions generated by event"
+msgstr ""
+
+#: data/content/index.html:269
+msgid "Other supporting evidence data that shows the results of your effort"
+msgstr ""
+
+#: data/content/index.html:270
+msgid "Links to and reach of posts on Fedora social media and publishing channels"
 msgstr ""
 
 #: data/content/e/404.html:7
