--- a/labs.fedoraproject.org/po/labs.fedoraproject.org.pot
+++ b/labs.fedoraproject.org/po/labs.fedoraproject.org.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2016-05-31 21:54+0200\n"
+"POT-Creation-Date: 2016-05-31 22:09+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -605,7 +605,7 @@ msgid "Astromatic"
 msgstr ""
 
 #: data/content/astronomy/index.html:119
-msgid "AstrOmatic.net is a website dedicated to astronomical pipeline software."
+msgid "AstrOmatic is a set of astronomical pipeline software."
 msgstr ""
 
 #: data/content/astronomy/index.html:140
