--- a/arm.fedoraproject.org/po/es.po
+++ b/arm.fedoraproject.org/po/es.po
@@ -1,21 +1,23 @@
 # Abdel G. Martínez L. <abdel.g.martinez.l@gmail.com>, 2015. #zanata
 # Dennis Tobar <dennis.tobar@gmail.com>, 2015. #zanata
 # William  Moreno Reyes <williamjmorenor@gmail.com>, 2015. #zanata
+# Máximo Castañeda Riloba <mcrcctm@gmail.com>, 2016. #zanata
+# tatica leandro <tatica@fedoraproject.org>, 2016. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2015-10-12 13:25+0200\n"
-"PO-Revision-Date: 2015-09-03 03:12-0400\n"
-"Last-Translator: Dennis Tobar <dennis.tobar@gmail.com>\n"
+"POT-Creation-Date: 2016-06-19 23:33+0200\n"
+"PO-Revision-Date: 2016-04-02 12:13-0400\n"
+"Last-Translator: Máximo Castañeda Riloba <mcrcctm@gmail.com>\n"
 "Language-Team: Spanish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 1.3\n"
 "Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"X-Generator: Zanata 3.7.3\n"
+"Generated-By: Babel 1.3\n"
+"X-Generator: Zanata 3.8.4\n"
 
 #: data/content/index.html:8
 msgid "Fedora ARM"
@@ -42,12 +44,9 @@ msgid "Fedora Server"
 msgstr "Fedora Server"
 
 #: data/content/index.html:35 data/content/index.html:49
-#: data/content/index.html:185 data/content/index.html:199
-#: data/content/index.html:227 data/content/prerelease.html:49
-#: data/content/prerelease.html:67 data/content/prerelease.html:85
-#: data/content/prerelease.html:103 data/content/prerelease.html:121
-#: data/content/prerelease.html:139 data/content/prerelease.html:157
-#: data/content/prerelease.html:194
+#: data/content/index.html:199 data/content/index.html:227
+#: data/content/prerelease.html:49 data/content/prerelease.html:67
+#: data/content/prerelease.html:139 data/content/prerelease.html:194
 #, python-format
 msgid "%sMB raw image"
 msgstr "Imagen raw de %sMB"
@@ -126,7 +125,9 @@ msgid "Fedora Workstation"
 msgstr "Fedora Workstation"
 
 #: data/content/index.html:157 data/content/index.html:171
-#: data/content/index.html:213
+#: data/content/index.html:185 data/content/index.html:213
+#: data/content/prerelease.html:85 data/content/prerelease.html:103
+#: data/content/prerelease.html:121 data/content/prerelease.html:157
 #, python-format
 msgid "%sGB raw image"
 msgstr "Imagen raw de %sGB "
@@ -233,7 +234,7 @@ msgstr ""
 
 #: data/content/index.html:431 data/content/prerelease.html:249
 msgid "General Help Using Fedora"
-msgstr "Ayuda General Utilizando Fedora"
+msgstr "Ayuda general en el uso de Fedora"
 
 #: data/content/index.html:432 data/content/prerelease.html:250
 #, python-format
@@ -242,19 +243,26 @@ msgid ""
 "with using general Fedora support resources. A list of resources is "
 "available at the <a href=\"%s\">Fedora “Get Help” page</a>."
 msgstr ""
-"Algunas veces encontrarás un inconveniente con este spin que encontrarás "
-"ayuda usando los recursos de soporte generales de Fedora. Una lista de "
-"recursos está disponible en la <a href=\"%s\">página de Fedora “Get "
-"Help”</a>."
+"En ocasiones se puede topar en esta edición con un problema para el que "
+"encontrará ayuda usando los recursos de soporte generales de Fedora. Hay una"
+" lista de estos recursos en la <a href=\"%s/es\">página de obtención de "
+"ayuda de Fedora</a>."
 
-#: data/content/index.html:445 data/content/index.html:456
+#: data/content/index.html:444 data/content/index.html:455
 #, python-format
 msgid "Fedora %(rel)s %(state)s released! <a href=\"%(link)s\">Try it now ></a>"
 msgstr ""
+"¡Fedora %(rel)s %(state)s ya disponible! <a href=\"%(link)s\">Pruébela ya "
+"></a>"
+
+#: data/content/index.html:466
+#, python-format
+msgid "Fedora %(rel)s released! Try it now."
+msgstr "¡Fedora %(rel)s ya disponible! Pruébela."
 
 #: data/content/prerelease.html:8
 msgid "Fedora ARM Prerelease Images"
-msgstr ""
+msgstr "Imágenes prelanzamiento de Fedora ARM"
 
 #: data/content/prerelease.html:21
 #, python-format
@@ -262,6 +270,8 @@ msgid ""
 "Download Fedora %(rel)s %(state)s for ARM<span class=\"sup\">®</span>-based "
 "Computers"
 msgstr ""
+"Descargue Fedora %(rel)s %(state)s para ordenadores basados es ARM<span "
+"class=\"sup\">®</span>"
 
 #: data/content/prerelease.html:26
 #, python-format
@@ -270,6 +280,10 @@ msgid ""
 "href=\"%(team_url)s\">ARM Team</a>. Please direct questions to their <a "
 "href=\"%(team_list)s\">mailing list</a> or %(team_irc)s on freenode."
 msgstr ""
+"Este es un software de pre-lanzamiento y está soportado por el <a "
+"href=\"%(team_url)s\">equipo de ARM</a>. Por favor dirija sus preguntas a su"
+" <a href=\"%(team_list)s\">lista de correos</a> o a %(team_irc)s en "
+"freenode."
 
 #: data/content/prerelease.html:27
 #, python-format
@@ -278,6 +292,9 @@ msgid ""
 "Bugzilla</a>. The Fedora Project makes no guarantees as to its suitability "
 "or usefulness."
 msgstr ""
+"Todos los inconvenientes y errores de software deben reportarse mediante <a "
+"href=\"%s\">Red Hat Bugzilla</a>. El Proyecto Fedora no garantiza su "
+"conveniencia o utilidad."
 
 #: data/content/prerelease.html:29 data/content/prerelease.html:31
 #, python-format
@@ -287,10 +304,14 @@ msgid ""
 "Bugs</a> page for information on commonly-encountered bugs and how to avoid "
 "them."
 msgstr ""
+"Lea las <a href=\"%(relnotes_url)s/es\">Notas de Lanzamiento</a> para mayor "
+"información sobre los cambios y nuevas funcionalidades, y la página de <a "
+"href=\"%(commonbugs_url)s/es\">Errores de Software Comunes</a> para "
+"información de errores comunes y cómo evitarlos."
 
 #: data/content/verify.html:8 data/content/verify.html:18
 msgid "Verify your Downloaded Image"
-msgstr "Verifica tu Imagen Descargada"
+msgstr "Verifique la imagen descargada"
 
 #: data/content/verify.html:20
 msgid "CHECKSUM and Verify Instructions"
@@ -306,9 +327,9 @@ msgid ""
 "verify your image, start by downloading the proper CHECKSUM file into the "
 "same directory as the image you downloaded."
 msgstr ""
-"Una vez has descargado la imagen, verifícala para seguridad e integridad. "
-"Para verificar su imagen, inicie descargando el archivo CHECKSUM apropiado "
-"en el mismo directorio de la imagen descargada."
+"Una vez que haya descargado la imagen, verifíquela por seguridad e "
+"integridad. Para hacerlo, comience por descargar el archivo CHECKSUM "
+"correspondiente en el mismo directorio en que descargó la imagen."
 
 #: data/content/verify.html:36
 msgid "Validate Server!"
@@ -319,8 +340,8 @@ msgid "Validate Workstation!"
 msgstr "¡Validar la Estación de Trabajo!"
 
 #: data/content/verify.html:42
-msgid "Validate Desktop!"
-msgstr "¡Validar Escritorio!"
+msgid "Validate Spins!"
+msgstr ""
 
 #: data/content/verify.html:48
 msgid "Next, import Fedora's GPG key(s):"
@@ -348,42 +369,36 @@ msgstr ""
 "llaves:"
 
 #: data/content/verify.html:55
-msgid "Fedora 24"
+msgid "Fedora 25"
 msgstr ""
 
 #: data/content/verify.html:56
-msgid "Fedora 24 secondary arches (aarch64, PPC64, PPC64le, s390 and s390x)"
+msgid "Fedora 25 secondary arches (AArch64, PPC64, PPC64le, s390 and s390x)"
 msgstr ""
 
 #: data/content/verify.html:57
+msgid "Fedora 24"
+msgstr "Fedora 24"
+
+#: data/content/verify.html:58
+msgid "Fedora 24 secondary arches (AArch64, PPC64, PPC64le, s390 and s390x)"
+msgstr ""
+
+#: data/content/verify.html:59
 msgid "Fedora 23"
 msgstr "Fedora 23"
 
-#: data/content/verify.html:58
-msgid "Fedora 23 secondary arches (aarch64, PPC64, PPC64le, s390 and s390x)"
+#: data/content/verify.html:60
+msgid "Fedora 23 secondary arches (AArch64, PPC64, PPC64le, s390 and s390x)"
 msgstr ""
-"Arquitecturas secundarias de Fedora 23 (aarch64, PPC64, PPC64le, s390 y "
-"s390x)"
 
-#: data/content/verify.html:59
+#: data/content/verify.html:61
 msgid "Fedora 22"
 msgstr "Fedora 22"
 
-#: data/content/verify.html:60
-msgid "Fedora 22 secondary arches (aarch64, PPC64, PPC64le, s390 and s390x)"
-msgstr ""
-"Arquitecturas secundarias de Fedora 22 (aarch64, PPC64, PPC64le, s390 y "
-"s390x)"
-
-#: data/content/verify.html:61
-msgid "Fedora 21"
-msgstr "Fedora 21"
-
 #: data/content/verify.html:62
-msgid "Fedora 21 secondary arches (aarch64, PPC64, PPC64le, s390 and s390x)"
+msgid "Fedora 22 secondary arches (AArch64, PPC64, PPC64le, s390 and s390x)"
 msgstr ""
-"Arquitecturas secundarias de Fedora 21 (aarch64, PPC64, PPC64le, s390 y "
-"s390x)"
 
 #: data/content/verify.html:64
 msgid ""
@@ -409,26 +424,24 @@ msgstr "Lea estas instrucciones para validar su imagen."
 
 #: data/content/e/404.html:7
 msgid "Fedora Project - Page Not Found"
-msgstr "Fedora Project - Página No Encontrada"
+msgstr "Proyecto Fedora - Página no encontrada"
 
 #: data/content/e/404.html:16
 msgid "404: Page Not Found"
-msgstr "404: Página No Encontrada"
+msgstr "404: Página no encontrada"
 
 #: data/content/e/404.html:18
 msgid "We apologize, but the file or page you requested could not be found."
-msgstr ""
-"Nos disculpamos, pero el fichero o página solicitada no puede ser "
-"encontrada."
+msgstr "Discúlpenos, no encontramos el archivo o página que solicitó."
 
 #: data/content/e/404.html:25
 msgid "Troubleshooting Ideas"
-msgstr "Ideas de Resolución de Problemas"
+msgstr "Algunas ideas para solucionarlo"
 
 #: data/content/e/404.html:29
 msgid ""
 "Double-check the URL if you entered it manually. Did you copy it correctly?"
-msgstr "Repasa la URL si la ingresó manualmente. ¿Lo copió correctamente?"
+msgstr "Compruebe la URL si la introdujo manualmente. ¿Es correcta?"
 
 #: data/content/e/404.html:32
 #, python-format
@@ -436,8 +449,8 @@ msgid ""
 "Bad Link? Contact <a href=\"%s\">the webmaster</a> and explain which link "
 "brought you here."
 msgstr ""
-"¿Mal enlace? Contacte al <a href=\"%s\">administrador del sitio web</a> y "
-"explique cuál enlace lo trajo hasta aquí."
+"¿Ha llegado siguiendo un enlace? Contacte con <a href=\"%s\">el "
+"administrador del sitio web</a> e indíquele dónde lo encontró."
 
 #: data/content/e/404.html:35
 #, python-format
@@ -445,8 +458,9 @@ msgid ""
 "The page or file may have moved. Check the <a href=\"%(fpo)s\">main site</a>"
 " or search our <a href=\"%(wiki)s\">wiki</a>."
 msgstr ""
-"La página o fichero ha sido movido. Verifique el <a href=\"%(fpo)s\">sitio "
-"principal</a> o busque nuestra <a href=\"%(wiki)s\">wiki</a>."
+"Puede que la página o el archivo haya cambiado de sitio. Busque en el <a "
+"href=\"%(fpo)s\">sitio principal</a> o explore nuestra <a "
+"href=\"%(wiki)s\">wiki</a>."
 
 #: data/templates/footer.html:14
 msgid "About"
@@ -466,43 +480,43 @@ msgstr "Revista Fedora"
 
 #: data/templates/footer.html:20
 msgid "Legal"
-msgstr ""
+msgstr "Legal"
 
 #: data/templates/footer.html:40
 msgid "Get Fedora Workstation"
-msgstr "Obtener Fedora Workstation"
+msgstr "Fedora Workstation"
 
 #: data/templates/footer.html:41
 msgid "Get Fedora Server"
-msgstr "Obtener Fedora Server"
+msgstr "Fedora Server"
 
 #: data/templates/footer.html:42
 msgid "Get Fedora Cloud"
-msgstr "Obtener Fedora Cloud"
+msgstr "Fedora Cloud"
 
 #: data/templates/footer.html:43
 msgid "Fedora Spins"
-msgstr "Fedora Spins"
+msgstr "Ediciones de Fedora"
 
 #: data/templates/footer.html:44
 msgid "Fedora Labs"
-msgstr ""
+msgstr "Fedora Labs"
 
 #: data/templates/footer.html:45
 msgid "Fedora ARM<span class=\"sup\">®</span>"
-msgstr ""
+msgstr "Fedora ARM<span class=\"sup\">®</span>"
 
 #: data/templates/footer.html:46
 msgid "Torrent Downloads"
-msgstr "Descarga de Torrent"
+msgstr "Descargas Torrent"
 
 #: data/templates/footer.html:53
 msgid "Support"
-msgstr "Soporte"
+msgstr "Asistencia"
 
 #: data/templates/footer.html:56
 msgid "Get Help"
-msgstr "Obtenga Ayuda"
+msgstr "Obtener ayuda"
 
 #: data/templates/footer.html:57
 msgid "Ask Fedora"
@@ -514,60 +528,72 @@ msgstr "Foros"
 
 #: data/templates/footer.html:59
 msgid "Common Bugs"
-msgstr "Errores de Software Comunes"
+msgstr "Errores comunes"
 
 #: data/templates/footer.html:60
+msgid "Fedora Developer Portal"
+msgstr "Portal Fedora para desarrolladores"
+
+#: data/templates/footer.html:61
 msgid "Installation Guide"
-msgstr "Guía de Instalación"
+msgstr "Guía de instalación"
 
-#: data/templates/footer.html:66
+#: data/templates/footer.html:67
 msgid "Join"
-msgstr "Únete"
-
-#: data/templates/footer.html:69
-msgid "Join Fedora"
-msgstr "Únete a Fedora"
+msgstr "Unirse"
 
 #: data/templates/footer.html:70
+msgid "Join Fedora"
+msgstr "Únase al Proyecto Fedora"
+
+#: data/templates/footer.html:71
 msgid "Planet Fedora"
 msgstr "Planeta Fedora"
 
-#: data/templates/footer.html:71
-msgid "Fedora SIGs"
-msgstr "Fedora SIGs"
-
 #: data/templates/footer.html:72
-msgid "Fedora Account System"
-msgstr "Sistema de Cuentas Fedora"
+msgid "Fedora SIGs"
+msgstr "Grupos de interés especial (SIG)"
 
 #: data/templates/footer.html:73
+msgid "Fedora Account System"
+msgstr "Sistema de cuentas de Fedora"
+
+#: data/templates/footer.html:74
 msgid "Fedora Community"
 msgstr "Comunidad Fedora"
 
-#: data/templates/footer.html:87
-msgid "Fedora is sponsored by Red Hat."
-msgstr "Fedora es patrocinado por Red Hat."
-
 #: data/templates/footer.html:88
-msgid "Learn more about the relationship between Red Hat and Fedora »"
-msgstr "Aprenda más de la relación entre Red Hat y Fedora »"
+msgid "Fedora is sponsored by Red Hat."
+msgstr "Fedora está patrocinado por Red Hat."
 
 #: data/templates/footer.html:89
+msgid "Learn more about the relationship between Red Hat and Fedora »"
+msgstr "Conozca más sobre la relación entre Red Hat y Fedora »"
+
+#: data/templates/footer.html:90
 #, python-format
 msgid "© %(year)s Red Hat, Inc. and others."
 msgstr "© %(year)s Red Hat, Inc. y otros."
 
-#: data/templates/footer.html:95
-msgid "Change Language"
-msgstr "Cambiar Idioma"
+#: data/templates/footer.html:90
+msgid ""
+"Please send any comments or corrections to the <a href=\"//fedorahosted.org"
+"/fedora-websites/\">websites team</a>."
+msgstr ""
+"Envíe cualquier comentario o corrección al <a href=\"//fedorahosted.org"
+"/fedora-websites/\">equipo de websites</a>."
 
-#: data/templates/footer.html:99
+#: data/templates/footer.html:96
+msgid "Change Language"
+msgstr "Cambiar idioma"
+
+#: data/templates/footer.html:100
 msgid "OK"
 msgstr "OK"
 
 #: data/templates/head.html:13
 msgid "Fedora Images for ARM<sup>®</sup>-based Computers"
-msgstr ""
+msgstr "Imágenes Fedora para computadoras ARM<sup>®</sup>"
 
 #: data/templates/generic/docs-links.html:8
 msgid "Documentation and other resources"
