--- a/arm.fedoraproject.org/po/hu.po
+++ b/arm.fedoraproject.org/po/hu.po
@@ -1,19 +1,21 @@
 # Kardos László <kardiweb@protonmail.ch>, 2015. #zanata
+# Teknős Ferenc <teferenc@t-online.hu>, 2015. #zanata
+# Bendegúz Gyönki <gyonkibendeguz@gmail.com>, 2016. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2015-10-12 13:25+0200\n"
-"PO-Revision-Date: 2015-07-20 03:14-0400\n"
-"Last-Translator: Kardos László <kardiweb@protonmail.ch>\n"
+"POT-Creation-Date: 2016-06-19 23:33+0200\n"
+"PO-Revision-Date: 2016-05-25 07:11-0400\n"
+"Last-Translator: Bendegúz Gyönki <gyonkibendeguz@gmail.com>\n"
 "Language-Team: Hungarian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 1.3\n"
 "Language: hu\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"X-Generator: Zanata 3.7.3\n"
+"Generated-By: Babel 1.3\n"
+"X-Generator: Zanata 3.8.4\n"
 
 #: data/content/index.html:8
 msgid "Fedora ARM"
@@ -30,6 +32,8 @@ msgid ""
 "These images are geared towards ARM-based computers used as servers, "
 "typically in a headless environment."
 msgstr ""
+"Ezek a lemezképek az általában kijelzők nélküli szerverként használt ARM "
+"alapú számítógépekhez készültek."
 
 #: data/content/index.html:32 data/content/index.html:79
 #: data/content/index.html:115 data/content/prerelease.html:46
@@ -38,15 +42,12 @@ msgid "Fedora Server"
 msgstr "Fedora Szerver"
 
 #: data/content/index.html:35 data/content/index.html:49
-#: data/content/index.html:185 data/content/index.html:199
-#: data/content/index.html:227 data/content/prerelease.html:49
-#: data/content/prerelease.html:67 data/content/prerelease.html:85
-#: data/content/prerelease.html:103 data/content/prerelease.html:121
-#: data/content/prerelease.html:139 data/content/prerelease.html:157
-#: data/content/prerelease.html:194
+#: data/content/index.html:199 data/content/index.html:227
+#: data/content/prerelease.html:49 data/content/prerelease.html:67
+#: data/content/prerelease.html:139 data/content/prerelease.html:194
 #, python-format
 msgid "%sMB raw image"
-msgstr "%sMB nyers kép"
+msgstr "%sMB nyers lemezkép"
 
 #: data/content/index.html:38 data/content/index.html:52
 #: data/content/index.html:80 data/content/index.html:89
@@ -120,16 +121,18 @@ msgid "Fedora Workstation"
 msgstr "Fedora Munkaállomás"
 
 #: data/content/index.html:157 data/content/index.html:171
-#: data/content/index.html:213
+#: data/content/index.html:185 data/content/index.html:213
+#: data/content/prerelease.html:85 data/content/prerelease.html:103
+#: data/content/prerelease.html:121 data/content/prerelease.html:157
 #, python-format
 msgid "%sGB raw image"
-msgstr "%sGB nyers kép"
+msgstr "%sGB nyers lemezkép"
 
 #: data/content/index.html:168 data/content/index.html:266
 #: data/content/index.html:340 data/content/prerelease.html:100
 #: data/content/prerelease.html:109
 msgid "KDE Plasma Desktop"
-msgstr "KDE Plazma Asztal"
+msgstr "KDE Plasma Asztal"
 
 #: data/content/index.html:182 data/content/index.html:275
 #: data/content/index.html:351 data/content/prerelease.html:118
@@ -233,14 +236,21 @@ msgstr ""
 "segítséget a Fedora támogatásnál. Ezeknek a listája megtalálható a <a "
 "href=\"%s\">Fedora “Segítség” oldalán</a>."
 
-#: data/content/index.html:445 data/content/index.html:456
+#: data/content/index.html:444 data/content/index.html:455
 #, python-format
 msgid "Fedora %(rel)s %(state)s released! <a href=\"%(link)s\">Try it now ></a>"
 msgstr ""
+"Fedora %(rel)s %(state)s elérhető! <a href=\"%(link)s\">Próbálja ki "
+"most!></a>"
+
+#: data/content/index.html:466
+#, python-format
+msgid "Fedora %(rel)s released! Try it now."
+msgstr "Fedora %(rel)s elérhető! Próbálja ki most."
 
 #: data/content/prerelease.html:8
 msgid "Fedora ARM Prerelease Images"
-msgstr ""
+msgstr "Fedora ARM kiadási előtti lemezképek"
 
 #: data/content/prerelease.html:21
 #, python-format
@@ -248,6 +258,8 @@ msgid ""
 "Download Fedora %(rel)s %(state)s for ARM<span class=\"sup\">®</span>-based "
 "Computers"
 msgstr ""
+"Fedora %(rel)s %(state)s letöltése ARM<span class=\"sup\">®</span>-alapú "
+"számítógépekhez"
 
 #: data/content/prerelease.html:26
 #, python-format
@@ -273,6 +285,11 @@ msgid ""
 "Bugs</a> page for information on commonly-encountered bugs and how to avoid "
 "them."
 msgstr ""
+"Olvassa el<a href=\"%(relnotes_url)s\">Kiadási megjegyzés</a> eket  további "
+"információkért és változásokért,képességekért,és a <a "
+"href=\"%(commonbugs_url)s\">Gyakori Hibák</a>  ra  vonatkozó oldalt  "
+"információkért a legyakrabban előforduló  hibákért és hogyan kerüljük el "
+"őket."
 
 #: data/content/verify.html:8 data/content/verify.html:18
 msgid "Verify your Downloaded Image"
@@ -305,8 +322,8 @@ msgid "Validate Workstation!"
 msgstr "Munkaállomás ellenőrzés!"
 
 #: data/content/verify.html:42
-msgid "Validate Desktop!"
-msgstr "Asztal ellenőrzés!"
+msgid "Validate Spins!"
+msgstr ""
 
 #: data/content/verify.html:48
 msgid "Next, import Fedora's GPG key(s):"
@@ -332,39 +349,36 @@ msgstr ""
 "aláírással:"
 
 #: data/content/verify.html:55
-msgid "Fedora 24"
+msgid "Fedora 25"
 msgstr ""
 
 #: data/content/verify.html:56
-msgid "Fedora 24 secondary arches (aarch64, PPC64, PPC64le, s390 and s390x)"
+msgid "Fedora 25 secondary arches (AArch64, PPC64, PPC64le, s390 and s390x)"
 msgstr ""
 
 #: data/content/verify.html:57
+msgid "Fedora 24"
+msgstr "Fedora 24"
+
+#: data/content/verify.html:58
+msgid "Fedora 24 secondary arches (AArch64, PPC64, PPC64le, s390 and s390x)"
+msgstr ""
+
+#: data/content/verify.html:59
 msgid "Fedora 23"
 msgstr "Fedora 23"
 
-#: data/content/verify.html:58
-msgid "Fedora 23 secondary arches (aarch64, PPC64, PPC64le, s390 and s390x)"
+#: data/content/verify.html:60
+msgid "Fedora 23 secondary arches (AArch64, PPC64, PPC64le, s390 and s390x)"
 msgstr ""
-"Fedora 22 másodlagos architektúrák (aarch64, PPC64, PPC64le, s390 és s390x)"
 
-#: data/content/verify.html:59
+#: data/content/verify.html:61
 msgid "Fedora 22"
 msgstr "Fedora 22"
 
-#: data/content/verify.html:60
-msgid "Fedora 22 secondary arches (aarch64, PPC64, PPC64le, s390 and s390x)"
-msgstr ""
-"Fedora 22 másodlagos architektúrák (aarch64, PPC64, PPC64le, s390 és s390x)"
-
-#: data/content/verify.html:61
-msgid "Fedora 21"
-msgstr "Fedora 21"
-
 #: data/content/verify.html:62
-msgid "Fedora 21 secondary arches (aarch64, PPC64, PPC64le, s390 and s390x)"
+msgid "Fedora 22 secondary arches (AArch64, PPC64, PPC64le, s390 and s390x)"
 msgstr ""
-"Fedora 21 másodlagos architektúrák (aarch64, PPC64, PPC64le, s390 és s390x)"
 
 #: data/content/verify.html:64
 msgid ""
@@ -446,7 +460,7 @@ msgstr "Fedora Magazin"
 
 #: data/templates/footer.html:20
 msgid "Legal"
-msgstr ""
+msgstr "Jogi információk"
 
 #: data/templates/footer.html:40
 msgid "Get Fedora Workstation"
@@ -497,51 +511,63 @@ msgid "Common Bugs"
 msgstr "Gyakori hibák"
 
 #: data/templates/footer.html:60
+msgid "Fedora Developer Portal"
+msgstr "Fedora Fejlesztői Portál"
+
+#: data/templates/footer.html:61
 msgid "Installation Guide"
 msgstr "Telepítési útmutató"
 
-#: data/templates/footer.html:66
+#: data/templates/footer.html:67
 msgid "Join"
 msgstr "Csatlakozás"
 
-#: data/templates/footer.html:69
+#: data/templates/footer.html:70
 msgid "Join Fedora"
 msgstr "Csatlakozás a Fedorához"
 
-#: data/templates/footer.html:70
+#: data/templates/footer.html:71
 msgid "Planet Fedora"
 msgstr "Fedora Planet"
 
-#: data/templates/footer.html:71
+#: data/templates/footer.html:72
 msgid "Fedora SIGs"
 msgstr "Fedora SIG-ek"
 
-#: data/templates/footer.html:72
+#: data/templates/footer.html:73
 msgid "Fedora Account System"
 msgstr "Fedora Nyilvántartó Rendszer (FAS)"
 
-#: data/templates/footer.html:73
+#: data/templates/footer.html:74
 msgid "Fedora Community"
 msgstr "Fedora Közösség"
 
-#: data/templates/footer.html:87
+#: data/templates/footer.html:88
 msgid "Fedora is sponsored by Red Hat."
 msgstr "Fedora a Red Hat által támogatott."
 
-#: data/templates/footer.html:88
+#: data/templates/footer.html:89
 msgid "Learn more about the relationship between Red Hat and Fedora »"
 msgstr "Tudjon meg többet a Red Hat és Fedora kapcsolatáról »"
 
-#: data/templates/footer.html:89
+#: data/templates/footer.html:90
 #, python-format
 msgid "© %(year)s Red Hat, Inc. and others."
 msgstr "© %(year)s Red Hat, Inc. és mások."
 
-#: data/templates/footer.html:95
+#: data/templates/footer.html:90
+msgid ""
+"Please send any comments or corrections to the <a href=\"//fedorahosted.org"
+"/fedora-websites/\">websites team</a>."
+msgstr ""
+"Kérjük, a megjegyzéseit és javításait a <a href=\"//fedorahosted.org/fedora-"
+"websites/\">weboldalakért felelős csapatnak</a> küldje el."
+
+#: data/templates/footer.html:96
 msgid "Change Language"
 msgstr "Az oldal nyelve:"
 
-#: data/templates/footer.html:99
+#: data/templates/footer.html:100
 msgid "OK"
 msgstr "OK"
 
@@ -560,6 +586,10 @@ msgid ""
 "requirements for Fedora. Consult <a href=\"%s\">the online release notes</a>"
 " to see minimum requirements and recommendations."
 msgstr ""
+"A Fedora telepítése előtt érdemes ellenőriznie, hogy a rendszere megfelel-e "
+"a Fedora minimális követelményeinek. A minimális követelményekről és "
+"ajánlásokról  <a href=\"%s\">az online kiadási megjegyzéseket</a> elolvasva "
+"tájékozódhat."
 
 #: data/templates/generic/docs-links.html:10
 #, python-format
