--- a/arm.fedoraproject.org/po/it.po
+++ b/arm.fedoraproject.org/po/it.po
@@ -1,3 +1,4 @@
+# Andrea Masala <andrea.masala87@gmail.com>, 2015. #zanata
 # Germano Massullo <germano.massullo@gmail.com>, 2015. #zanata
 # Gregorio <devim@outlook.it>, 2015. #zanata
 # Robert Mayr <robyduck@fedoraproject.org>, 2015. #zanata
@@ -5,17 +6,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2015-10-12 13:25+0200\n"
-"PO-Revision-Date: 2015-06-09 03:48-0400\n"
-"Last-Translator: Gregorio <devim@outlook.it>\n"
+"POT-Creation-Date: 2016-06-19 23:33+0200\n"
+"PO-Revision-Date: 2015-12-14 06:07-0500\n"
+"Last-Translator: Andrea Masala <andrea.masala87@gmail.com>\n"
 "Language-Team: Italian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 1.3\n"
 "Language: it\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"X-Generator: Zanata 3.7.3\n"
+"Generated-By: Babel 1.3\n"
+"X-Generator: Zanata 3.8.4\n"
 
 #: data/content/index.html:8
 msgid "Fedora ARM"
@@ -42,12 +43,9 @@ msgid "Fedora Server"
 msgstr "Fedora Server"
 
 #: data/content/index.html:35 data/content/index.html:49
-#: data/content/index.html:185 data/content/index.html:199
-#: data/content/index.html:227 data/content/prerelease.html:49
-#: data/content/prerelease.html:67 data/content/prerelease.html:85
-#: data/content/prerelease.html:103 data/content/prerelease.html:121
-#: data/content/prerelease.html:139 data/content/prerelease.html:157
-#: data/content/prerelease.html:194
+#: data/content/index.html:199 data/content/index.html:227
+#: data/content/prerelease.html:49 data/content/prerelease.html:67
+#: data/content/prerelease.html:139 data/content/prerelease.html:194
 #, python-format
 msgid "%sMB raw image"
 msgstr "Immagine %sMB raw"
@@ -127,7 +125,9 @@ msgid "Fedora Workstation"
 msgstr "Fedora Workstation"
 
 #: data/content/index.html:157 data/content/index.html:171
-#: data/content/index.html:213
+#: data/content/index.html:185 data/content/index.html:213
+#: data/content/prerelease.html:85 data/content/prerelease.html:103
+#: data/content/prerelease.html:121 data/content/prerelease.html:157
 #, python-format
 msgid "%sGB raw image"
 msgstr "Immagine %sGB raw"
@@ -247,14 +247,19 @@ msgstr ""
 "risorse è disponibile nella pagina <a href=\"%s\">Fedora “Ottieni "
 "Aiuto”</a>."
 
-#: data/content/index.html:445 data/content/index.html:456
+#: data/content/index.html:444 data/content/index.html:455
 #, python-format
 msgid "Fedora %(rel)s %(state)s released! <a href=\"%(link)s\">Try it now ></a>"
-msgstr ""
+msgstr "Fedora %(rel)s %(state)s rilasciata! <a href=\"%(link)s\">Prova ora ></a>"
+
+#: data/content/index.html:466
+#, python-format
+msgid "Fedora %(rel)s released! Try it now."
+msgstr "Fedora %(rel)s rilasciata! Provala ora."
 
 #: data/content/prerelease.html:8
 msgid "Fedora ARM Prerelease Images"
-msgstr ""
+msgstr "Immagini Fedora ARM Prerelease"
 
 #: data/content/prerelease.html:21
 #, python-format
@@ -262,6 +267,8 @@ msgid ""
 "Download Fedora %(rel)s %(state)s for ARM<span class=\"sup\">®</span>-based "
 "Computers"
 msgstr ""
+"Scarica Fedora %(rel)s %(state)s per i computer basati su ARM<span "
+"class=\"sup\">®</span> "
 
 #: data/content/prerelease.html:26
 #, python-format
@@ -270,6 +277,9 @@ msgid ""
 "href=\"%(team_url)s\">ARM Team</a>. Please direct questions to their <a "
 "href=\"%(team_list)s\">mailing list</a> or %(team_irc)s on freenode."
 msgstr ""
+"Questo è un software di pre-release ed è supportato dal <a "
+"href=\"%(team_url)s\">Team ARM</a>. Per eventuali domande, rivolgersi alla "
+"loro <a href=\"%(team_list)s\">mailing list</a> o %(team_irc)s su freenode."
 
 #: data/content/prerelease.html:27
 #, python-format
@@ -278,6 +288,9 @@ msgid ""
 "Bugzilla</a>. The Fedora Project makes no guarantees as to its suitability "
 "or usefulness."
 msgstr ""
+"Eventuali problemi o bug devono essere riportati nel <a href=\"%s\">Bugzilla"
+" di Red Hat</a>. Il Fedora Project non fornisce garanzie sulla idoneità o "
+"utilità."
 
 #: data/content/prerelease.html:29 data/content/prerelease.html:31
 #, python-format
@@ -287,6 +300,10 @@ msgid ""
 "Bugs</a> page for information on commonly-encountered bugs and how to avoid "
 "them."
 msgstr ""
+"Leggere le <a href=\"%(relnotes_url)s\">Note di rilascio</a> per avere "
+"maggiori informazioni sui cambiamenti e le nuove caratteristiche introdotte,"
+" e la pagina <a href=\"%(commonbugs_url)s\">Common Bugs</a> per conoscere le"
+" informazioni su problemi comuni riscontrati e su come evitarli."
 
 #: data/content/verify.html:8 data/content/verify.html:18
 msgid "Verify your Downloaded Image"
@@ -319,8 +336,8 @@ msgid "Validate Workstation!"
 msgstr "Validazione Workstation!"
 
 #: data/content/verify.html:42
-msgid "Validate Desktop!"
-msgstr "Validazione Desktop!"
+msgid "Validate Spins!"
+msgstr ""
 
 #: data/content/verify.html:48
 msgid "Next, import Fedora's GPG key(s):"
@@ -347,39 +364,36 @@ msgstr ""
 "seguenti chiavi:"
 
 #: data/content/verify.html:55
-msgid "Fedora 24"
+msgid "Fedora 25"
 msgstr ""
 
 #: data/content/verify.html:56
-msgid "Fedora 24 secondary arches (aarch64, PPC64, PPC64le, s390 and s390x)"
+msgid "Fedora 25 secondary arches (AArch64, PPC64, PPC64le, s390 and s390x)"
 msgstr ""
 
 #: data/content/verify.html:57
+msgid "Fedora 24"
+msgstr "Fedora 24"
+
+#: data/content/verify.html:58
+msgid "Fedora 24 secondary arches (AArch64, PPC64, PPC64le, s390 and s390x)"
+msgstr ""
+
+#: data/content/verify.html:59
 msgid "Fedora 23"
 msgstr "Fedora 23"
 
-#: data/content/verify.html:58
-msgid "Fedora 23 secondary arches (aarch64, PPC64, PPC64le, s390 and s390x)"
+#: data/content/verify.html:60
+msgid "Fedora 23 secondary arches (AArch64, PPC64, PPC64le, s390 and s390x)"
 msgstr ""
-"Fedora 23 architetture secondarie (aarch64, PPC64, PPC64le, s390 e s390x)"
 
-#: data/content/verify.html:59
+#: data/content/verify.html:61
 msgid "Fedora 22"
 msgstr "Fedora 22"
 
-#: data/content/verify.html:60
-msgid "Fedora 22 secondary arches (aarch64, PPC64, PPC64le, s390 and s390x)"
-msgstr ""
-"Fedora 22 architetture secondarie (aarch64, PPC64, PPC64le, s390 e s390x)"
-
-#: data/content/verify.html:61
-msgid "Fedora 21"
-msgstr "Fedora 21"
-
 #: data/content/verify.html:62
-msgid "Fedora 21 secondary arches (aarch64, PPC64, PPC64le, s390 and s390x)"
+msgid "Fedora 22 secondary arches (AArch64, PPC64, PPC64le, s390 and s390x)"
 msgstr ""
-"Fedora 21 architetture secondarie (aarch64, PPC64, PPC64le, s390 e s390x)"
 
 #: data/content/verify.html:64
 msgid ""
@@ -463,7 +477,7 @@ msgstr "Fedora Magazine"
 
 #: data/templates/footer.html:20
 msgid "Legal"
-msgstr ""
+msgstr "Note legali"
 
 #: data/templates/footer.html:40
 msgid "Get Fedora Workstation"
@@ -483,11 +497,11 @@ msgstr "Fedora Spins"
 
 #: data/templates/footer.html:44
 msgid "Fedora Labs"
-msgstr ""
+msgstr "Fedora Labs"
 
 #: data/templates/footer.html:45
 msgid "Fedora ARM<span class=\"sup\">®</span>"
-msgstr ""
+msgstr "Fedora ARM<span class=\"sup\">®</span>"
 
 #: data/templates/footer.html:46
 msgid "Torrent Downloads"
@@ -514,57 +528,69 @@ msgid "Common Bugs"
 msgstr "Bug Comuni"
 
 #: data/templates/footer.html:60
+msgid "Fedora Developer Portal"
+msgstr "Portale Sviluppatori Fedora"
+
+#: data/templates/footer.html:61
 msgid "Installation Guide"
 msgstr "Guida all'Installazione"
 
-#: data/templates/footer.html:66
+#: data/templates/footer.html:67
 msgid "Join"
 msgstr "Partecipa"
 
-#: data/templates/footer.html:69
+#: data/templates/footer.html:70
 msgid "Join Fedora"
 msgstr "Partecipa a Fedora"
 
-#: data/templates/footer.html:70
+#: data/templates/footer.html:71
 msgid "Planet Fedora"
 msgstr "Planet Fedora"
 
-#: data/templates/footer.html:71
+#: data/templates/footer.html:72
 msgid "Fedora SIGs"
 msgstr "Fedora SIG"
 
-#: data/templates/footer.html:72
+#: data/templates/footer.html:73
 msgid "Fedora Account System"
 msgstr "Fedora Account System"
 
-#: data/templates/footer.html:73
+#: data/templates/footer.html:74
 msgid "Fedora Community"
 msgstr "Comunità Fedora"
 
-#: data/templates/footer.html:87
+#: data/templates/footer.html:88
 msgid "Fedora is sponsored by Red Hat."
 msgstr "Fedora è sponsorizzata da Red Hat."
 
-#: data/templates/footer.html:88
+#: data/templates/footer.html:89
 msgid "Learn more about the relationship between Red Hat and Fedora »"
 msgstr "Ulteriori informazioni circa la relazione tra Red Hat e Fedora »"
 
-#: data/templates/footer.html:89
+#: data/templates/footer.html:90
 #, python-format
 msgid "© %(year)s Red Hat, Inc. and others."
 msgstr "© %(year)s Red Hat, Inc. ed altri."
 
-#: data/templates/footer.html:95
+#: data/templates/footer.html:90
+msgid ""
+"Please send any comments or corrections to the <a href=\"//fedorahosted.org"
+"/fedora-websites/\">websites team</a>."
+msgstr ""
+"Per favore inviare commenti e correzioni ai <a href=\"//fedorahosted.org"
+"/fedora-websites/\">websites team</a>."
+
+#: data/templates/footer.html:96
 msgid "Change Language"
 msgstr "Cambia Lingua"
 
-#: data/templates/footer.html:99
+#: data/templates/footer.html:100
 msgid "OK"
 msgstr "OK"
 
 #: data/templates/head.html:13
 msgid "Fedora Images for ARM<sup>®</sup>-based Computers"
-msgstr ""
+msgstr "Immagini Fedora per computer ARM<sup>®</sup>"
 
 #: data/templates/generic/docs-links.html:8
 msgid "Documentation and other resources"
