--- a/spins.fedoraproject.org/po/spins.fedoraproject.org.pot
+++ b/spins.fedoraproject.org/po/spins.fedoraproject.org.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2016-06-21 15:27+0200\n"
+"POT-Creation-Date: 2016-06-21 16:23+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1577,10 +1577,10 @@ msgstr ""
 
 #: data/content/soas/download/index.html:32
 msgid ""
-"This Spin failed to compose for the final release, however the nightly "
-"test compose contains the same package set as release and should meet "
-"most users needs. You can verify the test compose image with a dedicated "
-"CHECKSUM file for <a "
+"Although this spin failed to compose for the final release, the nightly "
+"test compose contains the same package set, and should meet most users' "
+"needs. You can verify the test compose image with a dedicated CHECKSUM "
+"file for <a "
 "href=\"http://dl.fedoraproject.org/pub/alt/unofficial/releases/24/x86_64"
 "/Fedora-UNOFFICIAL-24-20160614.n.0-x86_64-CHECKSUM\">64-bit</a> and <a "
 "href=\"http://dl.fedoraproject.org/pub/alt/unofficial/releases/24/i386"
