--- a/arm.fedoraproject.org/po/arm.fedoraproject.org.pot
+++ b/arm.fedoraproject.org/po/arm.fedoraproject.org.pot
@@ -8,14 +8,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2016-06-19 23:33+0200\n"
+"POT-Creation-Date: 2016-11-01 22:16+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 1.3\n"
+"Generated-By: Babel 2.3.4\n"
 
 #: data/content/index.html:8
 msgid "Fedora ARM"
@@ -41,8 +41,8 @@ msgstr ""
 
 #: data/content/index.html:35 data/content/index.html:49
 #: data/content/index.html:199 data/content/index.html:227
-#: data/content/prerelease.html:49 data/content/prerelease.html:67
-#: data/content/prerelease.html:139 data/content/prerelease.html:194
+#: data/content/prerelease.html:67 data/content/prerelease.html:139
+#: data/content/prerelease.html:194
 #, python-format
 msgid "%sMB raw image"
 msgstr ""
@@ -120,8 +120,9 @@ msgstr ""
 
 #: data/content/index.html:157 data/content/index.html:171
 #: data/content/index.html:185 data/content/index.html:213
-#: data/content/prerelease.html:85 data/content/prerelease.html:103
-#: data/content/prerelease.html:121 data/content/prerelease.html:157
+#: data/content/prerelease.html:49 data/content/prerelease.html:85
+#: data/content/prerelease.html:103 data/content/prerelease.html:121
+#: data/content/prerelease.html:157
 #, python-format
 msgid "%sGB raw image"
 msgstr ""
@@ -224,12 +225,12 @@ msgid ""
 "available at the <a href=\"%s\">Fedora “Get Help” page</a>."
 msgstr ""
 
-#: data/content/index.html:444 data/content/index.html:455
+#: data/content/index.html:445 data/content/index.html:456
 #, python-format
 msgid "Fedora %(rel)s %(state)s released! <a href=\"%(link)s\">Try it now ></a>"
 msgstr ""
 
-#: data/content/index.html:466
+#: data/content/index.html:467
 #, python-format
 msgid "Fedora %(rel)s released! Try it now."
 msgstr ""
@@ -323,35 +324,35 @@ msgid ""
 msgstr ""
 
 #: data/content/verify.html:55
-msgid "Fedora 25"
+msgid "Fedora 26"
 msgstr ""
 
 #: data/content/verify.html:56
-msgid "Fedora 25 secondary arches (AArch64, PPC64, PPC64le, s390 and s390x)"
+msgid "Fedora 26 secondary arches (AArch64, PPC64, PPC64le, s390 and s390x)"
 msgstr ""
 
 #: data/content/verify.html:57
-msgid "Fedora 24"
+msgid "Fedora 25"
 msgstr ""
 
 #: data/content/verify.html:58
-msgid "Fedora 24 secondary arches (AArch64, PPC64, PPC64le, s390 and s390x)"
+msgid "Fedora 25 secondary arches (AArch64, PPC64, PPC64le, s390 and s390x)"
 msgstr ""
 
 #: data/content/verify.html:59
-msgid "Fedora 23"
+msgid "Fedora 24"
 msgstr ""
 
 #: data/content/verify.html:60
-msgid "Fedora 23 secondary arches (AArch64, PPC64, PPC64le, s390 and s390x)"
+msgid "Fedora 24 secondary arches (AArch64, PPC64, PPC64le, s390 and s390x)"
 msgstr ""
 
 #: data/content/verify.html:61
-msgid "Fedora 22"
+msgid "Fedora 23"
 msgstr ""
 
 #: data/content/verify.html:62
-msgid "Fedora 22 secondary arches (AArch64, PPC64, PPC64le, s390 and s390x)"
+msgid "Fedora 23 secondary arches (AArch64, PPC64, PPC64le, s390 and s390x)"
 msgstr ""
 
 #: data/content/verify.html:64
