--- a/arm.fedoraproject.org/po/arm.fedoraproject.org.pot
+++ b/arm.fedoraproject.org/po/arm.fedoraproject.org.pot
@@ -8,14 +8,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2016-11-19 15:23+0100\n"
+"POT-Creation-Date: 2016-11-22 12:46+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.3.4\n"
+"Generated-By: Babel 1.3\n"
 
 #: data/content/index.html:8
 msgid "Fedora ARM"
@@ -438,7 +438,7 @@ msgid "Get Fedora Server"
 msgstr ""
 
 #: data/templates/footer.html:42
-msgid "Get Fedora Cloud"
+msgid "Get Fedora Atomic"
 msgstr ""
 
 #: data/templates/footer.html:43
@@ -454,7 +454,7 @@ msgid "Fedora ARM<span class=\"sup\">®</span>"
 msgstr ""
 
 #: data/templates/footer.html:46
-msgid "Torrent Downloads"
+msgid "Alternative Downloads"
 msgstr ""
 
 #: data/templates/footer.html:53
