--- a/alt.fedoraproject.org/po/alt.fedoraproject.org.pot
+++ b/alt.fedoraproject.org/po/alt.fedoraproject.org.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2016-11-22 12:44+0100\n"
+"POT-Creation-Date: 2016-11-23 21:38+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -548,7 +548,7 @@ msgstr ""
 #: data/content/alt/index.html:841 data/content/alt/index.html:873
 #: data/content/alt/index.html:900
 msgid ""
-"If you want to install Fedora on IBM z systems, then you are looking for "
+"If you want to install Fedora on IBM z Systems, then you are looking for "
 "this architecture."
 msgstr ""
 
