alt.fpo POT update

--- a/alt.fedoraproject.org/po/alt.fedoraproject.org.pot
+++ b/alt.fedoraproject.org/po/alt.fedoraproject.org.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2017-03-14 15:38+0100\n"
+"POT-Creation-Date: 2017-03-17 21:31+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1101,7 +1101,7 @@ msgstr ""
 #: data/content/prerelease/index.html:666
 #, python-format
 msgid ""
-"Discussion of Feora testing takes place in the <a href=\"%s\">#fedora-"
+"Discussion of Fedora testing takes place in the <a href=\"%s\">#fedora-"
 "qa</a> IRC channel on <strong>irc.freenode.org.</strong>"
 msgstr ""
 
