labs POT update

--- a/labs.fedoraproject.org/po/labs.fedoraproject.org.pot
+++ b/labs.fedoraproject.org/po/labs.fedoraproject.org.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2017-04-01 23:54+0200\n"
+"POT-Creation-Date: 2017-04-02 23:02+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -318,7 +318,7 @@ msgid "%s GB ISO Image"
 msgstr ""
 
 #: data/content/prerelease.html:135
-msgid "Get your Python lessons."
+msgid "Teach Python with ease."
 msgstr ""
 
 #: data/content/prerelease.html:224
